Password-protected the super-admin page, Corrected home page U.I jumbotron overlap, refactored the contact-us button to correspond with prototype

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -284,7 +284,7 @@ hr.dividing {
 
 .jumbotron::before {
     content: "";
-    background-image:url(binarymap.jpg) !important;
+    background-image:url(BINARY%20WORLD%202.png) !important;
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
@@ -836,7 +836,7 @@ ul.timeline > li:before {
   margin-bottom: 0;
 }
 
-.php-email-form button[type="submit"] {
+.btn-warning{
   background: #FED706;
   border: 0;
   padding: 10px 24px;
@@ -844,7 +844,7 @@ ul.timeline > li:before {
   transition: 0.4s;
 }
 
-.php-email-form button[type="submit"]:hover {
+.btn-warning:hover {
   background:#FED706;
 }
 
@@ -1133,12 +1133,3 @@ footer a:hover {
     color: #FED706;
 }
 
-.companies {
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url("binarymap.jpg");
-    height: 560px;
-            margin-bottom: 0px;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-}
